# OpenPS

./: .gitattributes  README.md
.github/workflows/: android_cloud_build.yml
FaceParsingModel/: .gitignore  ModelConverter.ipynb  onnx_to_tf.py  ptf_to_quantized_tflite.py  pth_quantize.py  pth_to_onnx.py  quantized_pth_to_onnx.py  requirements.txt  tf_to_tflite.py
FaceParsingModel/filters/: create_blackcat_lut.py  create_healthy_lut.py  create_skin_whiten_lut.py  create_sunrise_lut.py  create_sunset_lut.py  create_white_cat_lut.py
MagicCamera/: settings.gradle
MagicCamera/MagicFilter/: build.gradle
MagicCamera/MagicFilter/src/main/jni/: MagicSDK.cpp
MagicCamera/MagicFilter/src/main/jni/skinsmooth/: MagicBeauty.h
MagicCamera/app/: build.gradle
MagicCamera/app/src/main/: AndroidManifest.xml
MagicCamera/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  fragment_image_edit_adds.xml  fragment_image_edit_adjust.xml  fragment_image_edit_beauty.xml  fragment_image_edit_filter.xml
MagicCamera/app/src/main/res/values/: strings.xml  themes.xml
MagicCamera/app/src/main/res/values-night/: themes.xml
MagicCamera/gradle/wrapper/: gradle-wrapper.properties
OpenPS/: gradle.properties  settings.gradle
OpenPS-iOS/OpenPS/OpenPS/: OpenPSApp.swift  PhotoEditView.swift  SelectPhotoView.swift
OpenPS-iOS/OpenPS/OpenPS.xcodeproj/: project.pbxproj
OpenPS-iOS/OpenPS/OpenPS.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
OpenPS-iOS/OpenPS/OpenPS.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenPS/app/: build.gradle
OpenPS/app/src/main/: AndroidManifest.xml
OpenPS/app/src/main/assets/: 79999_iter.tflite  79999_iter_fp16.mnn  79999_iter_fp16.tflite  migan_pipeline_v2.mnn
OpenPS/app/src/main/cpp/: CMakeLists.txt  NativeLib.cpp  native-lib.cpp
OpenPS/app/src/main/cpp/cv/: CvLoader.cpp  CvLoader.h  CvUtils.cpp  CvUtils.h  InpaintLoader.cpp  InpaintLoader.h
OpenPS/app/src/main/cpp/model/: InpaintModelProcessor.cpp  InpaintModelProcessor.h  SkinModelProcessor.cpp  SkinModelProcessor.h
OpenPS/app/src/main/res/drawable/: bg_eliminate_zoom_view.xml  bg_import_button.xml  ic_back.xml  ic_blusher.xml  ic_brightness.xml  ic_cancel.xml  ic_compare.xml  ic_composition.xml  ic_contrast.xml  ic_eliminate_pen.xml  ic_eraser.xml  ic_exposure.xml  ic_eye_zoom.xml  ic_face_slim.xml  ic_freeform.xml  ic_generate.xml  ic_image_effect.xml  ic_lariat.xml  ic_launcher_background.xml  ic_lipstick.xml  ic_mirror.xml  ic_original.xml  ic_paint.xml  ic_perspective_vertical.xml  ic_preview_magnify.xml  ic_ratio_16_9.xml  ic_ratio_1_1.xml  ic_ratio_2_3.xml  ic_ratio_3_2.xml  ic_ratio_3_4.xml  ic_ratio_4_3.xml  ic_ratio_9_16.xml  ic_rotate_left.xml  ic_saturation.xml  ic_save.xml  ic_settings.xml  ic_sharpen.xml  ic_smooth.xml  ic_tick.xml  ic_visibility_off.xml  (+1 more)
OpenPS/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
OpenPS/app/src/main/res/layout/: activity_edit.xml  activity_export.xml  activity_gallery.xml  activity_main.xml  fragment_eliminate_pen.xml
OpenPS/app/src/main/res/menu/: menu_debug.xml  menu_edit.xml  menu_settings.xml
OpenPS/app/src/main/res/values/: colors.xml  (+3 more)
OpenPS/app/src/main/res/values-night/: themes.xml
OpenPS/gpupixel/: .gitignore  build.gradle
OpenPS/gpupixel/src/main/cpp/: lib.cmake
OpenPS/gradle/wrapper/: gradle-wrapper.properties
OpenPS/kotstore/: build.gradle.kts
ShaderTest/: settings.gradle
ShaderTest/app/: build.gradle
ShaderTest/app/src/main/: AndroidManifest.xml
ShaderTest/app/src/main/assets/: saturation_fragment_shader.glsl  texture_fragment_shader.glsl  vertex_shader.glsl
ShaderTest/gradle/wrapper/: gradle-wrapper.properties
(+242 files in other folders)
